--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,8 @@
             <div class="container">
                 <div class="carousel-caption text-left">
                     <h1><a href="recipe-detail.html">The Salmon Oatmeal Crackers</a></h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
+                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
                 </div>
             </div>
@@ -25,7 +26,8 @@
             <div class="container">
                 <div class="carousel-caption">
                     <h1><a href="recipe-detail.html">Wide range of vegetarian recipes</a></h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
+                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
                 </div>
             </div>
@@ -35,19 +37,20 @@
             <div class="container">
                 <div class="carousel-caption text-right">
                     <h1><a href="recipe-detail.html">Homemade Bread</a></h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
+                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
                 </div>
             </div>
         </div>
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
     </a>
 </div>
 
@@ -56,4 +59,3 @@
 
 
 {% endblock %}
-
