--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -5,45 +5,49 @@
 
 <!-- Search -->
 <form method='POST' id='category_form' action='{{ url_for("search_handler") }}'>
-<div class="search">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2>Browse Recipes</h2>
-                <div class="row">
-                    <div class="col-lg-3">
-                        <div class="form-group">
-                            <label>Choose category</label>
-                            <select class="js-search-category form-control" name="category" data-placeholder="Choose Category" form="category_form">
-                                <!-- Jinja for categories in DB -->
-                                {% for category in categories %}
+    <div class="search">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Browse Recipes</h2>
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <div class="form-group">
+                                <label>Choose category</label>
+                                <select class="js-search-category form-control" name="category"
+                                    data-placeholder="Choose Category" form="category_form">
+                                    <!-- Jinja for categories in DB -->
+                                    {% for category in categories %}
                                     <option value="{{ category.id }}">{{ category.name }}</option>
-                                {% endfor %}
-                            </select>
-            </div>
-        </div>
-        <div class="col-lg-6">
-            <div class="form-group">
-                <label>Select one or more ingredients that should be included in recipe</label>
-                <select class="js-search-ingredients form-control" name="ingredients[]" multiple="multiple" data-placeholder="Included Ingredients" form="category_form">
-                    <!-- Jinja for ingredients -->
-                    {% for ingredient in ingredients %}
-                        <option value="{{ ingredient.name }}">{{ ingredient.name }}</option>
-                    {% endfor %}
-                </select>
-                <label>Select one or more allergens that shouldn't be included in recipe</label>
-                <select class="js-search-ingredients form-control" name="allergens[]" multiple="multiple" data-placeholder="Without allergens">
-                    <!-- Jinja for allergens -->
-                    {% for allergen in allergens %}
-                        <option value="{{ allergen.id }}">{{ allergen.name }}</option>
-                    {% endfor %}
-                </select>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label>Select one or more ingredients that should be included in recipe</label>
+                                <select class="js-search-ingredients form-control" name="ingredients[]"
+                                    multiple="multiple" data-placeholder="Included Ingredients" form="category_form">
+                                    <!-- Jinja for ingredients -->
+                                    {% for ingredient in ingredients %}
+                                    <option value="{{ ingredient.name }}">{{ ingredient.name }}</option>
+                                    {% endfor %}
+                                </select>
+                                <label>Select one or more allergens that shouldn't be included in recipe</label>
+                                <select class="js-search-ingredients form-control" name="allergens[]"
+                                    multiple="multiple" data-placeholder="Without allergens">
+                                    <!-- Jinja for allergens -->
+                                    {% for allergen in allergens %}
+                                    <option value="{{ allergen.id }}">{{ allergen.name }}</option>
+                                    {% endfor %}
+                                </select>
                             </div>
                         </div>
                         <div class="col-lg-3">
                             <div class="form-group">
                                 <label>Recipe needs to have</label>
-                                <select class="js-search-category2 form-control" name="choose_ingredients" data-placeholder="Choose Category">
+                                <select class="js-search-category2 form-control" name="choose_ingredients"
+                                    data-placeholder="Choose Category">
                                     <option value="1">All of selected ingredients </option>
                                     <option value="2">Any of selected ingredients</option>
                                 </select>
@@ -60,7 +64,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- List recipes -->
     {% include '_list_recipes.html' %}
 
@@ -70,4 +74,3 @@
 
 
 {% endblock %}
-
